--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New&display=swap');
 *{
   /* outline: magenta solid 1px */
+  font-family: 'Zen Kaku Gothic New', sans-serif;
 }
