--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New&display=swap');
 *{
-  /* outline: magenta solid 1px */
+  /* outline: magenta solid 1px; */
   font-family: 'Zen Kaku Gothic New', sans-serif;
 }
